# internal/equipment/model_ambulance.go
@@ -17,4 +17,6 @@ type Ambulance struct {
 
 	// Name of the ambulance
 	Name string `json:"name"`
+
+	Equipment []Equipment `json:"equipment,omitempty"`
 }
